--- a/Views/Pages/PokemonFinder.cshtml
+++ b/Views/Pages/PokemonFinder.cshtml
@@ -1,5 +1,5 @@
 using Microsoft.AspNetCore.Mvc.RazorPages
-
+using Microsoft.AspNetCore.Http
 namespace AspNetCore.RazorApi.RazorPages
 {
   public class PokemonFinderModel : PageModel
